# epub-pinyin

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_READY.md  DEPLOYMENT_SUMMARY.md  LICENSE  MANIFEST.in  PINYIN_IMPROVEMENTS.md  README.md  build_and_deploy.py  fix_metadata.py  fix_source_metadata.py  pyproject.toml  pyproject.toml.backup  requirements-dev.txt  requirements.txt  setup.py.backup  test_pinyin.py
epub_pinyin/: __init__.py  epub_parser.py  main.py  pdf_converter.py  polyphonic_dict.py  text_processor.py
tests/: test_epub_parser.py  test_pdf_converter.py  test_text_processor.py
