[build-system]
requires = ["flit_core>=3.2.0"]
build-backend = "flit_core.buildapi"

[project]
name = "epub-pinyin"
version = "0.2.0"
description = "Add Pinyin annotations to Chinese text in EPUB files with smart polyphonic character handling"
readme = "README.md"
# Remove license field to avoid metadata issues
authors = [
    {name = "Tony", email = "tony.develop.2025@gmail.com"}
]
maintainers = [
    {name = "Tony", email = "tony.develop.2025@gmail.com"}
]
keywords = ["epub", "pinyin", "chinese", "annotation", "pdf", "text-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Text Processing :: Markup :: XML",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "pypinyin>=0.50.0",
    "jieba>=0.42.1",
    "lxml>=4.9.0",
]

[project.optional-dependencies]
pdf = ["reportlab>=4.0.0"]
dev = ["pytest>=8.0.0", "reportlab>=4.0.0", "twine>=4.0.0", "build>=0.10.0"]

[project.scripts]
epub-pinyin = "epub_pinyin.main:main"

[project.urls]
Homepage = "https://github.com/tony-develop-2025/epub-pinyin"
Repository = "https://github.com/tony-develop-2025/epub-pinyin"
Documentation = "https://github.com/tony-develop-2025/epub-pinyin#readme"
Issues = "https://github.com/tony-develop-2025/epub-pinyin/issues"
